--- a/macros.tex
+++ b/macros.tex
@@ -58,7 +58,7 @@
 \def\bfy{\mathbfit{y}}
 \def\bfu{\mathbfit{u}}
 
-\def\dd{,\diff}
+\def\dd{\,\diff}
 
 \def\note#1{\textcolor{MRed}{#1}}
 \def\comment#1{\textcolor{MGreen}{#1}}
