--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 29 Apr 2013.
+%% Created using Papers on Wed, 01 May 2013.
 %% http://mekentosj.com/papers/
 
 @article{Richardson:1997ea,
@@ -8,8 +8,7 @@ journal = {Journal of Royal Statistical Society B},
 year = {1997},
 volume = {59},
 number = {4},
-pages = {731--792},
-doi = {10.1111/1467-9868.00095}
+pages = {731--792}
 }
 
 @article{Goldberg:1991wo,
@@ -29,8 +28,7 @@ journal = {Statistics {\&} Probability Letters},
 year = {2004},
 volume = {69},
 number = {2},
-pages = {189--198},
-doi = {10.1016/j.spl.2004.06.025}
+pages = {189--198}
 }
 
 @article{Halmos:1949ti,
@@ -50,8 +48,7 @@ journal = {The American Statistician},
 year = {1999},
 volume = {53},
 number = {3},
-pages = {225--232},
-doi = {10.2307/2686101}
+pages = {225--232}
 }
 
 @article{Hume:1992fy,
@@ -61,8 +58,7 @@ journal = {Synapse},
 year = {1992},
 volume = {12},
 number = {1},
-pages = {47--54},
-doi = {10.1002/syn.890120106}
+pages = {47--54}
 }
 
 @inproceedings{Douc:2005wa,
@@ -70,8 +66,7 @@ author = {Douc, Randal and Capp{\'e}, Olivier and Moulines, Eric},
 title = {{Comparison of resampling schemes for particle filtering}},
 booktitle = {Proceedings of the 4th International Symposium on Imange and Signal Processing and Analysis},
 year = {2005},
-pages = {1--6},
-url = {http://arxiv.org/abs/cs/0507025v1}
+pages = {1--6}
 }
 
 @incollection{Akaike:1977ul,
@@ -89,8 +84,7 @@ journal = {Statistics and Computing},
 year = {2004},
 volume = {14},
 number = {1},
-pages = {11--21},
-doi = {10.1023/B:STCO.0000009418.04621.cd}
+pages = {11--21}
 }
 
 @article{Olkin:1981vi,
@@ -120,8 +114,7 @@ journal = {NeuroImage},
 year = {2009},
 volume = {47},
 number = {1},
-pages = {184--193},
-doi = {10.1016/j.neuroimage.2009.03.051}
+pages = {184--193}
 }
 
 @inproceedings{Bolic:2003hl,
@@ -129,8 +122,7 @@ author = {Boli{\'c}, Miodrag and Djuri{\'c}, Petar M. and Hong, Sangjin},
 title = {{New resampling algorithms for particel filters}},
 booktitle = {Proceedings of IEEE International Conference on Acoustics, Speech, and Signal Processing Proceedings},
 year = {2003},
-pages = {589--592},
-doi = {10.1109/ICASSP.2003.1202435}
+pages = {589--592}
 }
 
 @inproceedings{Hol:2006ff,
@@ -138,8 +130,7 @@ author = {Hol, Jeroen D. and Schon, Thomas B. and Gustafsson, Fredrik},
 title = {{On resampling algorithms for particle filters}},
 booktitle = {Proceedings of IEEE Nonlinear Statistical Signal Processing Workshop},
 year = {2006},
-pages = {79--82},
-doi = {10.1109/NSSPW.2006.4378824}
+pages = {79--82}
 }
 
 @article{Newton:1994wm,
@@ -159,8 +150,7 @@ journal = {NeuroImage},
 year = {2009},
 volume = {45},
 number = {4},
-pages = {1183--1189},
-doi = {10.1016/j.neuroimage.2008.12.064}
+pages = {1183--1189}
 }
 
 @article{Hamilton:1995ty,
@@ -190,8 +180,7 @@ journal = {Communications of the ACM},
 year = {1978},
 volume = {21},
 number = {4},
-pages = {317--322},
-doi = {10.1145/359460.359482}
+pages = {317--322}
 }
 
 @article{Ridgeway:2003gq,
@@ -201,8 +190,7 @@ journal = {Data Mining and Knowledge Discovery},
 year = {2003},
 volume = {7},
 number = {3},
-pages = {301--319},
-doi = {10.1023/A:1024084221803}
+pages = {301--319}
 }
 
 @article{Robert:1994vh,
@@ -222,8 +210,7 @@ journal = {IEEE Transactions on Medical Imaging},
 year = {2008},
 volume = {27},
 number = {9},
-pages = {1356--1369},
-doi = {10.1109/TMI.2008.922185}
+pages = {1356--1369}
 }
 
 @article{Buck:1996td,
@@ -253,8 +240,7 @@ journal = {The Annals of Statistics},
 year = {2004},
 volume = {32},
 number = {6},
-pages = {2385--2411},
-doi = {10.1214/009053604000000698}
+pages = {2385--2411}
 }
 
 @phdthesis{Hastie:2005vi,
@@ -276,8 +262,7 @@ pages = {257--280}
 @techreport{DelMoral:2009th,
 author = {Del Moral, Pierre and Doucet, Arnaud},
 title = {{Particle methods: An introduction with applications}},
-year = {2009},
-publisher = {INRIA}
+year = {2009}
 }
 
 @article{Kitagawa:1996vj,
@@ -307,8 +292,7 @@ journal = {Journal of Applied Statistics},
 year = {1993},
 volume = {20},
 number = {5},
-pages = {25--62},
-doi = {10.1080/02664769300000058}
+pages = {25--62}
 }
 
 @article{Geweke:1989tm,
@@ -338,8 +322,7 @@ journal = {Statistics {\&} Probability Letters},
 year = {1995},
 volume = {23},
 number = {1},
-pages = {53--61},
-doi = {10.1016/0167-7152(94)00094-O}
+pages = {53--61}
 }
 
 @article{Schwarz:1978uv,
@@ -359,8 +342,7 @@ journal = {Biometrika},
 year = {2007},
 volume = {94},
 number = {4},
-pages = {787--807},
-doi = {10.1093/biomet/asm069}
+pages = {787--807}
 }
 
 @article{Kinahan:1989ih,
@@ -370,8 +352,7 @@ journal = {IEEE Transactions on Nuclear Science},
 year = {1989},
 volume = {36},
 number = {1},
-pages = {964--968},
-doi = {10.1109/23.34585}
+pages = {964--968}
 }
 
 @article{Samiuddin:1990vy,
@@ -388,8 +369,7 @@ pages = {865}
 title = {{Theory of Probability}},
 author = {Jeffreys, Harold},
 howpublished = {Clarendon Press},
-year = {1961},
-publisher = {Clarendon Press}
+year = {1961}
 }
 
 @article{Jones:1993cn,
@@ -399,8 +379,7 @@ journal = {Journal of Optimization Theory and Application},
 year = {1993},
 volume = {79},
 number = {1},
-pages = {157--181},
-doi = {10.1007/BF00941892}
+pages = {157--181}
 }
 
 @article{Akaike:1980gh,
@@ -410,8 +389,7 @@ journal = {Bayesian Statistics},
 year = {1980},
 volume = {31},
 number = {1},
-pages = {143--166},
-doi = {10.1007/BF02888350}
+pages = {143--166}
 }
 
 @article{Berger:2001uy,
@@ -431,8 +409,7 @@ journal = {Computational Statistics {\&} Data Analysis},
 year = {2008},
 volume = {52},
 number = {4},
-pages = {1765--1791},
-doi = {10.1016/j.csda.2007.09.009}
+pages = {1765--1791}
 }
 
 @article{Didelot:2011wo,
@@ -453,10 +430,7 @@ year = {2010},
 volume = {38},
 number = {1},
 pages = {1--22},
-month = dec,
-doi = {10.1111/j.1467-9469.2010.00723.x},
-language = {English},
-url = {http://doi.wiley.com/10.1111/j.1467-9469.2010.00723.x}
+month = dec
 }
 
 @article{Andrieu:2006tw,
@@ -467,9 +441,7 @@ year = {2006},
 volume = {16},
 number = {3},
 pages = {1462--1505},
-month = aug,
-publisher = {Institute of Mathematical Statistics},
-url = {http://projecteuclid.org/euclid.aoap/1159804988}
+month = aug
 }
 
 @article{Roberts:1996vd,
@@ -479,10 +451,7 @@ journal = {Bernoulli},
 year = {1996},
 volume = {2},
 number = {4},
-pages = {341--363},
-publisher = {Bernoulli Society for Mathematical Statistics and Probability},
-language = {English},
-url = {http://projecteuclid.org/euclid.bj/1178291835}
+pages = {341--363}
 }
 
 @article{Liu:1995vl,
@@ -536,8 +505,7 @@ pages = {205--217}
 @techreport{Besag:2001um,
 author = {Besag, Julian},
 title = {{Markov chain Monte Carlo for statistical inference}},
-year = {2001},
-publisher = {Center for Statistics and the Social Sciences, University of Washington}
+year = {2001}
 }
 
 @article{DelMoral:2005hw,
@@ -547,8 +515,7 @@ journal = {The Annals of Applied Probability},
 year = {2005},
 volume = {15},
 number = {4},
-pages = {2496--2534},
-doi = {10.1214/105051605000000566}
+pages = {2496--2534}
 }
 
 @article{Kac:1949dq,
@@ -558,8 +525,7 @@ journal = {Transactions of the American Mathematical Society},
 year = {1949},
 volume = {65},
 number = {1},
-pages = {1--13},
-doi = {10.2307/1990512}
+pages = {1--13}
 }
 
 @article{Arulampalam:2002hg,
@@ -569,8 +535,7 @@ journal = {IEEE Transactions on Signal Processing},
 year = {2002},
 volume = {50},
 number = {2},
-pages = {174--188},
-doi = {10.1109/78.978374}
+pages = {174--188}
 }
 
 @article{Daniels:1987uk,
@@ -600,8 +565,7 @@ journal = {IEEE Transactions on Automatic Control},
 year = {1974},
 volume = {19},
 number = {6},
-pages = {716--723},
-doi = {10.1109/TAC.1974.1100705}
+pages = {716--723}
 }
 
 @article{Cappe:2007hz,
@@ -611,8 +575,7 @@ journal = {Proceedings of the IEEE},
 year = {2007},
 volume = {95},
 number = {5},
-pages = {899--924},
-doi = {10.1109/JPROC.2007.893250}
+pages = {899--924}
 }
 
 @article{Kong:1994ul,
@@ -632,8 +595,7 @@ journal = {Proceedings of the National Academy of Sciences of the United States 
 year = {2007},
 volume = {104},
 number = {6},
-pages = {1760--1765},
-doi = {10.1073/pnas.0607208104}
+pages = {1760--1765}
 }
 
 @article{Calderhead:2009bd,
@@ -643,9 +605,7 @@ journal = {Computational Statistics {\&} Data Analysis},
 year = {2009},
 volume = {53},
 number = {12},
-pages = {4028--4045},
-doi = {10.1016/j.csda.2009.07.025},
-url = {http://www.dcs.gla.ac.uk/inference/}
+pages = {4028--4045}
 }
 
 @article{Hawkins:1986ha,
@@ -655,8 +615,7 @@ journal = {Journal of Cerebral Blood Flow {\&} Metabolism},
 year = {1986},
 volume = {6},
 number = {2},
-pages = {170--183},
-doi = {10.1038/jcbfm.1986.30}
+pages = {170--183}
 }
 
 @article{Jasra:2007in,
@@ -666,8 +625,7 @@ journal = {Statistics and Computing},
 year = {2007},
 volume = {17},
 number = {3},
-pages = {263--279},
-doi = {10.1007/s11222-007-9028-9}
+pages = {263--279}
 }
 
 @inproceedings{Johansen:2006wm,
@@ -685,8 +643,7 @@ journal = {Statistical Science},
 year = {1987},
 volume = {2},
 number = {3},
-pages = {317--335},
-doi = {10.1214/ss/1177013238}
+pages = {317--335}
 }
 
 @incollection{Doucet:2011us,
@@ -704,8 +661,7 @@ journal = {Journal of American Statistical Association},
 year = {2000},
 volume = {95},
 number = {449},
-pages = {135--143},
-doi = {10.2307/2669533}
+pages = {135--143}
 }
 
 @article{Birnbaum:1962tj,
@@ -725,8 +681,7 @@ journal = {Methodology and Computing in Applied Probability},
 year = {2006},
 volume = {8},
 number = {2},
-pages = {265--291},
-doi = {10.1007/s11009-006-8552-y}
+pages = {265--291}
 }
 
 @article{Rousset:2006kq,
@@ -736,8 +691,7 @@ journal = {Journal of Statistical Physics},
 year = {2006},
 volume = {123},
 number = {6},
-pages = {1251--1272},
-doi = {10.1007/s10955-006-9090-2}
+pages = {1251--1272}
 }
 
 @article{Metropolis:1953ex,
@@ -747,8 +701,7 @@ journal = {The Journal of Chemical Physics},
 year = {1953},
 volume = {21},
 number = {6},
-pages = {1087--1092},
-doi = {10.1002/qua.560560820}
+pages = {1087--1092}
 }
 
 @article{Lecuyer:2002uy,
@@ -787,8 +740,7 @@ journal = {Statistics and Computing},
 year = {2008},
 volume = {18},
 number = {1},
-pages = {47--57},
-doi = {10.1007/s11222-007-9037-8}
+pages = {47--57}
 }
 
 @article{Cunningham:1991fs,
@@ -798,8 +750,7 @@ journal = {Journal of Cerebral Blood Flow {\&} Metabolism},
 year = {1991},
 volume = {11},
 number = {1},
-pages = {1--9},
-doi = {10.1038/jcbfm.1991.1}
+pages = {1--9}
 }
 
 @article{BarndorffNielsen:1979ug,
@@ -825,8 +776,7 @@ pages = {185--194}
 @article{Robert:2011uv,
 author = {Robert, Christian P. and Cornuet, Jean-Marie and Marin, Jean-Michel and Pillai, Natesh S.},
 title = {{Lack of confidence in approximate Bayesian computation model choice}},
-year = {2011},
-language = {English}
+year = {2011}
 }
 
 @article{Eddy:1980wm,
@@ -846,8 +796,7 @@ journal = {Statistics and Computing},
 year = {2008},
 volume = {18},
 number = {4},
-pages = {447--459},
-doi = {10.1007/s11222-008-9059-x}
+pages = {447--459}
 }
 
 @article{Roberts:1996wb,
@@ -877,8 +826,7 @@ journal = {Statistics and Computing},
 year = {2008},
 volume = {18},
 number = {4},
-pages = {343--373},
-doi = {10.1007/s11222-008-9110-y}
+pages = {343--373}
 }
 
 @article{Laskey:2003et,
@@ -888,8 +836,7 @@ journal = {Machine Learning},
 year = {2003},
 volume = {50},
 number = {1/2},
-pages = {175--196},
-doi = {10.1023/A:1020206129842}
+pages = {175--196}
 }
 
 @article{DelMoral:2006hc,
@@ -899,8 +846,7 @@ journal = {Journal of Royal Statistical Society B},
 year = {2006},
 volume = {68},
 number = {3},
-pages = {411--436},
-doi = {10.1111/j.1467-9868.2006.00553.x}
+pages = {411--436}
 }
 
 @book{Bernardo:1994vd,
@@ -936,8 +882,7 @@ journal = {The Computer Journal},
 year = {1965},
 volume = {7},
 number = {4},
-pages = {308--313},
-doi = {10.1093/comjnl/7.4.308}
+pages = {308--313}
 }
 
 @article{Lugannani:1980tc,
@@ -955,8 +900,7 @@ author = {Yu, Jinxia and Liu, Wenjing and Tang, Yongli},
 title = {{Improved particle filter algorithms based on partial systematic resampling}},
 booktitle = {Proceedings of IEEE International Conference on Intelligent Computing and Intelligent Systems},
 year = {2010},
-pages = {483--487},
-doi = {10.1109/ICICISYS.2010.5658594}
+pages = {483--487}
 }
 
 @phdthesis{Wickham:G4KrC0Vz,
@@ -980,8 +924,7 @@ journal = {Bernoulli},
 year = {2001},
 volume = {7},
 number = {2},
-pages = {223},
-doi = {10.2307/3318737}
+pages = {223}
 }
 
 @article{Stephens:2000wq,
@@ -1001,8 +944,7 @@ journal = {Communications of the ACM},
 year = {1981},
 volume = {24},
 number = {4},
-pages = {233--245},
-doi = {10.1145/358598.358630}
+pages = {233--245}
 }
 
 @article{Gilks:1998dl,
@@ -1012,17 +954,14 @@ journal = {Journal of the American Statistical Association},
 year = {1998},
 volume = {93},
 number = {443},
-pages = {1045},
-doi = {10.2307/2669848}
+pages = {1045}
 }
 
 @techreport{Zhou:2011uo,
 author = {Zhou, Yan and Aston, John A. D. and Johansen, Adam M.},
 title = {{Bayesian model comparison for compartmental models with applications in positron emission tomography}},
 institution = {CRiSM, University of Warwick},
-year = {2011},
-publisher = {University of Warwick},
-affiliation = {CRiSM, University of Warwick}
+year = {2011}
 }
 
 @article{Doucet:2006ji,
@@ -1032,8 +971,7 @@ journal = {Journal of Computational and Graphical Statistics},
 year = {2006},
 volume = {15},
 number = {3},
-pages = {693--711},
-doi = {10.1198/106186006X142744}
+pages = {693--711}
 }
 
 @article{Kinderman:1977tn,
@@ -1073,8 +1011,7 @@ journal = {Journal of the American Statistical Association},
 year = {1995},
 volume = {90},
 number = {432},
-pages = {1313--1321},
-doi = {10.2307/2291521}
+pages = {1313--1321}
 }
 
 @article{McCulloch:1991hj,
@@ -1084,8 +1021,7 @@ journal = {Journal of Econometrics},
 year = {1991},
 volume = {49},
 number = {1-2},
-pages = {141--168},
-doi = {10.1016/0304-4076(91)90012-3}
+pages = {141--168}
 }
 
 @article{Green:1995dg,
@@ -1095,8 +1031,7 @@ journal = {Biometrika},
 year = {1995},
 volume = {82},
 number = {4},
-pages = {711--732},
-doi = {10.1093/biomet/82.4.711}
+pages = {711--732}
 }
 
 @article{Chopin:2002hg,
@@ -1106,8 +1041,7 @@ journal = {Biometrika},
 year = {2002},
 volume = {89},
 number = {3},
-pages = {539--552},
-doi = {10.1093/biomet/89.3.539}
+pages = {539--552}
 }
 
 @book{Shiryaev:1995vp,
@@ -1126,8 +1060,7 @@ journal = {IEE Proceedings - Radar, Sonar and Navigation},
 year = {1999},
 volume = {146},
 number = {1},
-pages = {2--7},
-doi = {10.1049/ip-rsn:19990255}
+pages = {2--7}
 }
 
 @article{Kalogeropoulos:2010cs,
@@ -1137,8 +1070,7 @@ journal = {The Annals of Statistics},
 year = {2010},
 volume = {38},
 number = {2},
-pages = {784--807},
-doi = {10.1214/09-AOS702}
+pages = {784--807}
 }
 
 @article{Evans:1995wz,
@@ -1159,10 +1091,7 @@ year = {2008},
 volume = {36},
 number = {5},
 pages = {2344--2376},
-month = oct,
-publisher = {Institute of Mathematical Statistics},
-language = {English},
-url = {http://projecteuclid.org/euclid.aos/1223908095}
+month = oct
 }
 
 @article{Brown:1950wy,
@@ -1183,10 +1112,7 @@ year = {2001},
 volume = {96},
 number = {454},
 pages = {653--666},
-month = jun,
-doi = {10.1198/016214501753168325},
-language = {English},
-url = {http://www.tandfonline.com/doi/abs/10.1198/016214501753168325}
+month = jun
 }
 
 @article{Cox:1987wo,
@@ -1206,8 +1132,7 @@ journal = {Journal of the American Statistical Association},
 year = {2001},
 volume = {96},
 number = {453},
-pages = {270--281},
-doi = {10.1198/016214501750332848}
+pages = {270--281}
 }
 
 @article{DeanFang:2012gj,
@@ -1217,8 +1142,7 @@ journal = {NeuroImage},
 year = {2012},
 volume = {61},
 number = {1},
-pages = {131--138},
-doi = {10.1016/j.neuroimage.2012.03.003}
+pages = {131--138}
 }
 
 @article{Atchade:2010ha,
@@ -1228,8 +1152,7 @@ journal = {Statistics and Computing},
 year = {2010},
 volume = {21},
 number = {4},
-pages = {555--568},
-doi = {10.1007/s11222-010-9192-1}
+pages = {555--568}
 }
 
 @article{Kang:2011gg,
@@ -1239,8 +1162,7 @@ journal = {Journal of the American Statistical Association},
 year = {2011},
 volume = {106},
 number = {493},
-pages = {124--134},
-doi = {10.1198/jasa.2011.ap09735}
+pages = {124--134}
 }
 
 @article{Marshall:2011gi,
@@ -1251,10 +1173,7 @@ year = {2011},
 volume = {22},
 number = {5},
 pages = {1041--1057},
-month = sep,
-doi = {10.1007/s11222-011-9276-6},
-language = {English},
-url = {http://www.springerlink.com/index/10.1007/s11222-011-9276-6}
+month = sep
 }
 
 @article{Parzen:1962tf,
@@ -1274,8 +1193,7 @@ journal = {Statistical Science},
 year = {1995},
 volume = {10},
 number = {3},
-pages = {231--253},
-doi = {10.1214/ss/1177009937}
+pages = {231--253}
 }
 
 @article{Feng:2012ik,
@@ -1286,10 +1204,7 @@ year = {2012},
 volume = {107},
 number = {497},
 pages = {102--119},
-month = mar,
-doi = {10.1198/jasa.2011.ap09529},
-language = {English},
-url = {http://www.tandfonline.com/doi/abs/10.1198/jasa.2011.ap09529}
+month = mar
 }
 
 @article{Richard:2007gz,
@@ -1299,8 +1214,7 @@ journal = {Journal of Econometrics},
 year = {2007},
 volume = {141},
 number = {2},
-pages = {1385--1411},
-doi = {10.1016/j.jeconom.2007.02.007}
+pages = {1385--1411}
 }
 
 @article{Gelfand:1994ux,
@@ -1320,8 +1234,7 @@ journal = {Statistical Science},
 year = {1998},
 volume = {13},
 number = {2},
-pages = {163--185},
-doi = {10.1214/ss/1028905934}
+pages = {163--185}
 }
 
 @article{Berger:1992kf,
@@ -1331,8 +1244,7 @@ journal = {Biometrika},
 year = {1992},
 volume = {79},
 number = {1},
-pages = {25--37},
-doi = {10.1093/biomet/79.1.25}
+pages = {25--37}
 }
 
 @article{Nadaraya:1964uu,
@@ -1352,9 +1264,7 @@ year = {2012},
 volume = {74},
 number = {3},
 pages = {1--56},
-month = apr,
-doi = {10.1111/j.1467-9868.2011.01010.x},
-url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2011.01010.x/abstract;jsessionid=8E816FDD559F94577664F802686CFD06.d04t03}
+month = apr
 }
 
 @article{Salmon:2011um,
@@ -1372,9 +1282,7 @@ journal = {Statistica Sinica},
 year = {2011},
 volume = {21},
 number = {1},
-pages = {5--42},
-publisher = {Academia Sinica* Institute of Statistical Science},
-url = {http://www.utstat.utoronto.ca/reid/research/A09-300_edited_varin.pdf}
+pages = {5--42}
 }
 
 @book{Lehmann:2005vy,
@@ -1401,10 +1309,7 @@ journal = {Journal of the Royal Statistical Society: Series B (Statistical Metho
 year = {2010},
 volume = {72},
 number = {3},
-pages = {269--342},
-doi = {10.1111/j.1467-9868.2009.00736.x},
-language = {English},
-url = {http://doi.wiley.com/10.1111/j.1467-9868.2009.00736.x}
+pages = {269--342}
 }
 
 @article{BarndorffNielsen:1980je,
@@ -1414,8 +1319,7 @@ journal = {Biometrika},
 year = {1980},
 volume = {67},
 number = {2},
-pages = {293--310},
-doi = {10.1093/biomet/67.2.293}
+pages = {293--310}
 }
 
 @article{Cowles:1996bv,
@@ -1425,8 +1329,7 @@ journal = {Journal of the American Statistical Association},
 year = {1996},
 volume = {91},
 number = {434},
-pages = {883--904},
-doi = {10.2307/2291683}
+pages = {883--904}
 }
 
 @article{Anonymous:YjBmKgMg,
@@ -1436,9 +1339,7 @@ journal = {Journal of the Royal Statistical Society: Series B (Statistical Metho
 year = {2006},
 volume = {68},
 number = {3},
-pages = {333--382},
-publisher = {Wiley Online Library},
-url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2006.00552.x/full}
+pages = {333--382}
 }
 
 @article{Epanechnikov:1969vm,
@@ -1477,8 +1378,7 @@ journal = {Computational Statistics},
 year = {1999},
 volume = {14},
 number = {3},
-pages = {375},
-doi = {10.1007/s001800050022}
+pages = {375}
 }
 
 @article{Beskos:2005el,
@@ -1489,10 +1389,7 @@ year = {2005},
 volume = {15},
 number = {4},
 pages = {2422--2444},
-month = nov,
-doi = {10.1214/105051605000000485},
-language = {English},
-url = {http://projecteuclid.org/Dienst/getRecord?id=euclid.aoap/1133965767/}
+month = nov
 }
 
 @article{Logan:2000fw,
@@ -1502,8 +1399,7 @@ journal = {Nuclear Medicine and Biology},
 year = {2000},
 volume = {27},
 number = {7},
-pages = {661--670},
-doi = {10.1016/S0969-8051(00)00137-2}
+pages = {661--670}
 }
 
 @article{Papaspiliopoulos:2008dk,
@@ -1514,10 +1410,7 @@ year = {2008},
 volume = {95},
 number = {1},
 pages = {169--186},
-month = jan,
-doi = {10.1093/biomet/asm086},
-language = {English},
-url = {http://biomet.oxfordjournals.org/cgi/doi/10.1093/biomet/asm086}
+month = jan
 }
 
 @article{Golightly:2008cx,
@@ -1527,8 +1420,7 @@ journal = {Computational Statistics {\&} Data Analysis},
 year = {2008},
 volume = {52},
 number = {3},
-pages = {1674--1693},
-doi = {10.1016/j.csda.2007.05.019}
+pages = {1674--1693}
 }
 
 @article{Akaike:1978ti,
@@ -1548,8 +1440,7 @@ journal = {The Annals of Applied Probability},
 year = {1997},
 volume = {7},
 number = {1},
-pages = {110--120},
-doi = {10.1214/aoap/1034625254}
+pages = {110--120}
 }
 
 @article{Bernardo:1979uq,
@@ -1576,8 +1467,7 @@ journal = {Journal of the American Statistical Association},
 year = {1993},
 volume = {88},
 number = {422},
-pages = {680},
-doi = {10.2307/2290351}
+pages = {680}
 }
 
 @article{Ruppert:1994wk,
@@ -1597,8 +1487,7 @@ journal = {Biometrika},
 year = {1996},
 volume = {83},
 number = {2},
-pages = {251--266},
-doi = {10.1093/biomet/83.2.251}
+pages = {251--266}
 }
 
 @article{Leva:1992vm,
@@ -1628,8 +1517,7 @@ journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engine
 year = {1946},
 volume = {186},
 number = {1007},
-pages = {453--461},
-doi = {10.1098/rspa.1946.0056}
+pages = {453--461}
 }
 
 @article{Vyshemirsky:2008ch,
@@ -1639,8 +1527,7 @@ journal = {Bioinformatics},
 year = {2008},
 volume = {24},
 number = {6},
-pages = {833--839},
-doi = {10.1093/bioinformatics/btm607}
+pages = {833--839}
 }
 
 @article{Chow:1981te,
@@ -1661,10 +1548,7 @@ year = {2009},
 volume = {37},
 number = {2},
 pages = {697--725},
-month = apr,
-doi = {10.1214/07-AOS574},
-language = {English},
-url = {http://projecteuclid.org/euclid.aos/1236693147}
+month = apr
 }
 
 @article{Jasra:2005kl,
@@ -1674,8 +1558,7 @@ journal = {Statistical Science},
 year = {2005},
 volume = {20},
 number = {1},
-pages = {50--67},
-doi = {10.1214/088342305000000016}
+pages = {50--67}
 }
 
 @article{Kass:1996jj,
@@ -1685,8 +1568,7 @@ journal = {Journal of American Statistical Association},
 year = {1996},
 volume = {91},
 number = {435},
-pages = {1343--1370},
-doi = {10.2307/2291752}
+pages = {1343--1370}
 }
 
 @article{Yu:1998fn,
@@ -1696,9 +1578,7 @@ journal = {Statistics and Computing},
 year = {1998},
 volume = {8},
 number = {3},
-pages = {275--286},
-doi = {10.1023/A:1008917713940},
-url = {http://www.springerlink.com/index/p74l73t52672h40g.pdf}
+pages = {275--286}
 }
 
 @article{Kass:1992tz,
@@ -1718,9 +1598,7 @@ journal = {Proceedings of the National Academy of Sciences of the United States 
 year = {2003},
 volume = {100},
 number = {26},
-pages = {15324--15328},
-publisher = {National Acad Sciences},
-url = {http://www.pnas.org/content/100/26/15324.short}
+pages = {15324--15328}
 }
 
 @article{Fan:2008tf,
@@ -1739,9 +1617,7 @@ journal = {Journal of the Royal Statistical Society: Series B (Statistical Metho
 year = {2010},
 volume = {72},
 number = {4},
-pages = {497--512},
-publisher = {Wiley Online Library},
-url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2010.00744.x/full}
+pages = {497--512}
 }
 
 @article{DeRiggi:1983wr,
@@ -1761,9 +1637,7 @@ journal = {Biometrika},
 year = {2002},
 volume = {89},
 number = {3},
-pages = {539--552},
-publisher = {Biometrika Trust},
-url = {http://biomet.oxfordjournals.org/content/89/3/539.short}
+pages = {539--552}
 }
 
 @article{Hastings:1970gd,
@@ -1773,8 +1647,7 @@ journal = {Biometrika},
 year = {1970},
 volume = {57},
 number = {1},
-pages = {97--109},
-doi = {10.1093/biomet/57.1.97}
+pages = {97--109}
 }
 
 @article{Kass:1993vy,
@@ -1791,8 +1664,7 @@ pages = {551--560}
 author = {Murray, Iain and Ghahramani, Zoubin and MacKay, David},
 title = {{MCMC for doubly-intractable distributions}},
 journal = {ArXiv},
-year = {2012},
-url = {http://arxiv.org/abs/1206.6848}
+year = {2012}
 }
 
 @article{Mankoff:1998ui,
@@ -1812,9 +1684,7 @@ journal = {Biometrika},
 year = {2004},
 volume = {91},
 number = {3},
-pages = {729--737},
-publisher = {Biometrika Trust},
-url = {http://biomet.oxfordjournals.org/content/91/3/729.short}
+pages = {729--737}
 }
 
 @article{Altekar:2004jz,
@@ -1825,10 +1695,7 @@ year = {2004},
 volume = {20},
 number = {3},
 pages = {407--415},
-month = feb,
-doi = {10.1093/bioinformatics/btg427},
-language = {English},
-url = {http://bioinformatics.oxfordjournals.org/cgi/doi/10.1093/bioinformatics/btg427}
+month = feb
 }
 
 @article{Lammertsma:1996ik,
@@ -1838,8 +1705,7 @@ journal = {NeuroImage},
 year = {1996},
 volume = {4},
 number = {3 Pt 1},
-pages = {153--158},
-doi = {10.1006/nimg.1996.0066}
+pages = {153--158}
 }
 
 @book{Wasserman:2006uf,
@@ -1878,8 +1744,7 @@ year = {2012},
 eprint = {1203.3725v1},
 eprinttype = {arxiv},
 eprintclass = {stat.CO},
-month = mar,
-url = {http://arxiv.org/abs/1203.3725v1}
+month = mar
 }
 
 @article{Chen:1995jn,
@@ -1889,8 +1754,7 @@ journal = {IEEE Transactions on Nuclear Science},
 year = {1995},
 volume = {42},
 number = {6},
-pages = {2173--2179},
-doi = {10.1109/23.489413}
+pages = {2173--2179}
 }
 
 @article{West:1993us,
@@ -1910,8 +1774,7 @@ journal = {Biometrika},
 year = {1989},
 volume = {76},
 number = {2},
-pages = {297--307},
-doi = {10.1093/biomet/76.2.297}
+pages = {297--307}
 }
 
 @article{Bartolucci:2006cb,
@@ -1921,8 +1784,7 @@ journal = {Biometrika},
 year = {2006},
 volume = {93},
 number = {1},
-pages = {41--52},
-doi = {10.1093/biomet/93.1.41}
+pages = {41--52}
 }
 
 @article{Gunn:2001cx,
@@ -1932,8 +1794,7 @@ journal = {Journal of Cerebral Blood Flow {\&} Metabolism},
 year = {2001},
 volume = {21},
 number = {6},
-pages = {635--652},
-doi = {10.1097/00004647-200106000-00002}
+pages = {635--652}
 }
 
 @book{Burnham:2002wc,
@@ -1952,8 +1813,7 @@ journal = {Journal of the American Statistical Association},
 year = {2005},
 volume = {100},
 number = {469},
-pages = {109--120},
-doi = {10.1198/016214504000001303}
+pages = {109--120}
 }
 
 @article{Bozdogan:1987wy,
@@ -1988,8 +1848,7 @@ author = {Sch{\"a}fer, Christian and Chopin, Nicolas},
 title = {{Sequential Monte Carlo on large binary sampling spaces}},
 journal = {Statistics and Computing},
 year = {2011},
-pages = {1--22},
-doi = {10.1007/s11222-011-9299-z}
+pages = {1--22}
 }
 
 @article{Givens:1996ul,
@@ -2019,8 +1878,7 @@ journal = {Journal of the American Statistical Association},
 year = {1998},
 volume = {93},
 number = {443},
-pages = {1032--1044},
-doi = {10.2307/2669847}
+pages = {1032--1044}
 }
 
 @article{Doucet:2000ui,
@@ -2050,8 +1908,7 @@ journal = {Journal of Computational and Graphical Statistics},
 year = {2010},
 volume = {19},
 number = {4},
-pages = {769--789},
-doi = {10.1198/jcgs.2010.10039}
+pages = {769--789}
 }
 
 @article{Meng:1996wj,
@@ -2088,8 +1945,7 @@ journal = {Journal of Cerebral Blood Flow {\&} Metabolism},
 year = {2003},
 volume = {23},
 number = {4},
-pages = {490--498},
-doi = {10.1097/01.WCB.0000050065.57184.BB}
+pages = {490--498}
 }
 
 @article{Albert:1993kc,
@@ -2099,8 +1955,7 @@ journal = {Journal of the American Statistical Association},
 year = {1993},
 volume = {88},
 number = {422},
-pages = {669--679},
-doi = {10.2307/2290350}
+pages = {669--679}
 }
 
 @incollection{Berger:1992wo,
@@ -2138,8 +1993,7 @@ journal = {IEEE Aerospace and Electronic Systems Magazine},
 year = {2010},
 volume = {25},
 number = {7},
-pages = {53--82},
-doi = {10.1109/MAES.2010.5546308}
+pages = {53--82}
 }
 
 @article{Roberts:2001ta,
@@ -2169,8 +2023,7 @@ journal = {Annals of the Institute of Statistical Mathematics},
 year = {1982},
 volume = {34},
 number = {1},
-pages = {123--133},
-doi = {10.1007/BF02481014}
+pages = {123--133}
 }
 
 @article{Carlin:1995uy,
@@ -2200,8 +2053,7 @@ journal = {Annals of Neurology},
 year = {1984},
 volume = {15},
 number = {3},
-pages = {217--227},
-doi = {10.1002/ana.410150302}
+pages = {217--227}
 }
 
 @article{Whitley:1994kp,
@@ -2210,8 +2062,7 @@ title = {{A genetic algorithm tutorial}},
 journal = {Statistics and Computing},
 year = {1994},
 volume = {4},
-number = {2},
-doi = {10.1007/BF00175354}
+number = {2}
 }
 
 @inproceedings{Andrieu:1999cc,
@@ -2219,8 +2070,7 @@ author = {Andrieu, Christophe and De Freitas, N. and Doucet, Arnaud},
 title = {{Sequential MCMC for Bayesian model selection}},
 booktitle = {Proceedings of IEEE Higher Order Statistics Workshop},
 year = {1999},
-pages = {130--134},
-doi = {10.1109/HOST.1999.778709}
+pages = {130--134}
 }
 
 @article{Hastie:1987dj,
@@ -2230,8 +2080,7 @@ journal = {The American Statistician},
 year = {1987},
 volume = {41},
 number = {1},
-pages = {16--20},
-doi = {10.2307/2684312}
+pages = {16--20}
 }
 
 @article{Cappe:2004fe,
@@ -2241,8 +2090,7 @@ journal = {Journal of Computational and Graphical Statistics},
 year = {2004},
 volume = {13},
 number = {4},
-pages = {907--929},
-doi = {10.1198/106186004X12803}
+pages = {907--929}
 }
 
 @article{Neal:2001we,
@@ -2259,8 +2107,7 @@ pages = {125--139}
 author = {Johansen, Adam M.},
 title = {{Some non-standard sequential Monte Carlo methods and their applications}},
 school = {University of Cambridge},
-year = {2006},
-publisher = {University of Cambridge}
+year = {2006}
 }
 
 @article{Gelfand:1990it,
@@ -2270,8 +2117,7 @@ journal = {Journal of the American Statistical Association},
 year = {1990},
 volume = {85},
 number = {410},
-pages = {398--409},
-doi = {10.2307/2289776}
+pages = {398--409}
 }
 
 @article{BarndorffNielsen:1983ia,
@@ -2281,8 +2127,7 @@ journal = {Biometrika},
 year = {1983},
 volume = {70},
 number = {2},
-pages = {343--365},
-doi = {10.1093/biomet/70.2.343}
+pages = {343--365}
 }
 
 @article{Green:2011tk,
@@ -2310,8 +2155,7 @@ year = {2012},
 volume = {18},
 number = {1},
 pages = {252--278},
-month = feb,
-doi = {10.3150/10-BEJ335}
+month = feb
 }
 
 @article{Cappe:2003ek,
@@ -2321,8 +2165,7 @@ journal = {Journal of Royal Statistical Society B},
 year = {2003},
 volume = {65},
 number = {3},
-pages = {679--700},
-doi = {10.1111/1467-9868.00409}
+pages = {679--700}
 }
 
 @article{Pitt:2010th,
@@ -2333,8 +2176,17 @@ year = {2010},
 eprint = {1006.1914v1},
 eprinttype = {arxiv},
 eprintclass = {stat.ME},
-month = jun,
-url = {http://arxiv.org/abs/1006.1914}
+month = jun
+}
+
+@article{Spiegelhalter:2002wt,
+author = {Spiegelhalter, David J. and Best, Nicola G. and Carlin, Bradley P. and Van Der Linde, Angelika},
+title = {{Bayesian measures of model complexity and fit}},
+journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+year = {2002},
+volume = {64},
+number = {4},
+pages = {583--639}
 }
 
 @phdthesis{Fearnhead:1998wj,
@@ -2350,8 +2202,7 @@ journal = {Journal of Computational and Graphical Statistics},
 year = {2001},
 volume = {10},
 number = {2},
-pages = {230--248},
-doi = {10.1198/10618600152627924}
+pages = {230--248}
 }
 
 @incollection{Akaike:1973uc,
@@ -2370,8 +2221,7 @@ journal = {IEEE Signal Processing Letters},
 year = {2004},
 volume = {11},
 number = {5},
-pages = {482--485},
-doi = {10.1109/LSP.2004.826634}
+pages = {482--485}
 }
 
 @incollection{Raftery:2007ud,
@@ -2391,8 +2241,7 @@ journal = {EURASIP Journal on Advances in Signal Processing},
 year = {2004},
 volume = {2004},
 number = {15},
-pages = {2267--2277},
-doi = {10.1155/S1110865704405149}
+pages = {2267--2277}
 }
 
 @article{Grelaud:2009gc,
@@ -2402,8 +2251,7 @@ journal = {Bayesian Analysis},
 year = {2009},
 volume = {4},
 number = {2},
-pages = {317--336},
-doi = {10.1214/09-BA412}
+pages = {317--336}
 }
 
 @article{Grenander:1994vy,
@@ -2415,3 +2263,4 @@ volume = {56},
 number = {4},
 pages = {549--603}
 }
+
