first half of monte carlo

--- a/macros.tex
+++ b/macros.tex
@@ -58,7 +58,14 @@
 \def\bfy{\mathbfit{y}}
 \def\bfu{\mathbfit{u}}
 
-\def\dd{\,\diff}
+\def\intd{\,\diff}
+\def\iid{\ifmmode\text{i.i.d.}\else{i.i.d.}\xspace\fi}
+
+\def\Xiu{X^{(i)}}
+\def\xiu{x^{(i)}}
+\def\Wiu{W^{(i)}}
+\def\wiu{w^{(i)}}
+\def\bthiu{\bth^{(i)}}
 
 \def\note#1{\textcolor{MRed}{#1}}
 \def\comment#1{\textcolor{MGreen}{#1}}
