--- a/thesis.tex
+++ b/thesis.tex
@@ -1,26 +1,29 @@
 \documentclass[11pt, hyper, bib, fontset = Minion]{mthesis}
+\def\inthesis{}
 \input{macros}
 \addbibresource{thesis.bib}
 
-\title{Bayesian model comparison\\
-  sequential Monte Carlo\\
-  \& path sampling}
+\title{Bayesian Model Comparison with Sequential Monte Carlo}
 \author{Yan Zhou}
 
 \begin{document}
 
-  \frontmatter
-  \maketitle
-  \tableofcontents
+\frontmatter
+\maketitle
+\tableofcontents
 
-  \mainmatter
-  \input{chap/1-introduction}
-  \input{chap/2-information}
-  \input{chap/3-bayesian}
-  \input{chap/4-computation}
-  \input{chap/5-smcpath}
+\mainmatter
+\input{chap/notations}
+\input{chap/introduction}
+\input{chap/model-comparison}
+\input{chap/monte-carlo}
+\input{chap/bayesian-pet}
+\input{chap/bayesian-smc}
+\input{chap/vsmc}
+\input{chap/applications}
+\input{chap/conclusions}
 
-  \backmatter
-  \printbibliography
+\backmatter
+\printbibliography
 
 \end{document}
