chapters have a common header

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,10 +1,11 @@
-\documentclass[11pt, hyper, bib, fontset = Minion]{mthesis}
+\documentclass[11pt, hyper, bib, fontset=Minion]{mthesis}
 \def\inthesis{}
 \input{macros}
 \addbibresource{thesis.bib}
 
 \title{Bayesian Model Comparison with Sequential Monte Carlo}
 \author{Yan Zhou}
+\date{\today}
 
 \begin{document}
 
