--- a/macros.tex
+++ b/macros.tex
@@ -33,12 +33,7 @@
 \def\mha{Metropolis-Hastings algorithm\xspace}
 
 \def\dkl{D_{\mathrm{KL}}}
-
-\def\bth{{\mathbfit{\theta}}}
-\def\bTh{{\mathbfit{\Theta}}}
-
-\def\hbth{\widehat{\bth}}
-\def\tbth{\widetilde{\bth}}
+\def\data{\mathbfit{y}}
 
 \def\lvec#1#2{#1_1,\dots,#1_{#2}}
 \def\svec#1#2{#1^1,\dots,#1^{#2}}
@@ -63,11 +58,11 @@
 \def\intd{\,\diff}
 \def\iid{\ifmmode\text{i.i.d.}\else{i.i.d.}\xspace\fi}
 
-\def\Xiu{X^{(i)}}
-\def\xiu{x^{(i)}}
-\def\Wiu{W^{(i)}}
-\def\wiu{w^{(i)}}
-\def\bthiu{\bth^{(i)}}
+\def\supi#1{#1^{(i)}}
+\def\Xiu{\supi{X}}
+\def\xiu{\supi{x}}
+\def\Wiu{\supi{W}}
+\def\wiu{\supi{w}}
 
 \def\note#1{\textcolor{MRed}{#1}}
 \def\comment#1{\textcolor{MGreen}{#1}}
