--- a/thesis.tex
+++ b/thesis.tex
@@ -1,11 +1,6 @@
-\documentclass[11pt, hyper, bib, fontset=Minion]{mthesis}
 \def\inthesis{}
-\input{macros}
-\addbibresource{thesis.bib}
-
-\title{Bayesian Model Comparison with Sequential Monte Carlo}
-\author{Yan Zhou}
-\date{\today}
+\input{header}
+\title{Bayesian \\Model Comparison with \\Sequential Monte Carlo}
 
 \begin{document}
 
