--- a/thesis.bib
+++ b/thesis.bib
@@ -1,5 +1,5 @@
-%% Created using Papers on Wed, 01 May 2013.
-%% http://mekentosj.com/papers/
+%% Created using Papers on Wed, 22 May 2013.
+%% http://papersapp.com/papers/
 
 @article{Richardson:1997ea,
 author = {Richardson, Sylvia and Green, Peter J.},
@@ -2130,11 +2130,11 @@ number = {2},
 pages = {343--365}
 }
 
-@article{Green:2011tk,
+@article{Green:2001tk,
 author = {Green, Peter J. and Mira, Antonietta},
 title = {{Delayed rejection in reversible jump Metropolis-Hastings}},
 journal = {Biometrika},
-year = {2011},
+year = {2001},
 volume = {88},
 number = {4},
 pages = {1035--1053}
@@ -2187,6 +2187,16 @@ year = {2002},
 volume = {64},
 number = {4},
 pages = {583--639}
+}
+
+@article{Hills:1993vb,
+author = {Hills, Susan E and Smith, Adrian FM},
+title = {{Diagnostic plots for improved parameterization in Bayesian inference}},
+journal = {Biometrika},
+year = {1993},
+volume = {80},
+number = {1},
+pages = {61--74}
 }
 
 @phdthesis{Fearnhead:1998wj,
