--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \def\inthesis{}
 \input{header}
-\title{Bayesian \\Model Comparison with \\Sequential Monte Carlo}
+\title{Bayesian Model Comparison \\with Sequential Monte Carlo}
 
 \begin{document}
 
