update model comparison

--- a/macros.tex
+++ b/macros.tex
@@ -34,6 +34,7 @@
 
 \def\dkl{D_{\mathrm{KL}}}
 \def\data{\mathbfit{y}}
+\def\Data{\mathbfit{Y}}
 
 \def\lvec#1#2{#1_1,\dots,#1_{#2}}
 \def\svec#1#2{#1^1,\dots,#1^{#2}}
