update model comp

--- a/macros.tex
+++ b/macros.tex
@@ -5,17 +5,19 @@
 \fi
 
 \def\DeclareAbbr#1#2{\def#1{\textsc{#2}\xspace}}
-\DeclareAbbr{\ess}{ess}
 \DeclareAbbr{\aic}{aic}
 \DeclareAbbr{\bic}{bic}
 \DeclareAbbr{\dic}{dic}
+\DeclareAbbr{\ess}{ess}
 \DeclareAbbr{\fic}{fic}
 \DeclareAbbr{\fpe}{fpe}
 \DeclareAbbr{\gic}{gic}
+\DeclareAbbr{\ic}{ic}
 \DeclareAbbr{\ieee}{ieee}
 \DeclareAbbr{\mcmc}{mcmc}
 \DeclareAbbr{\mdl}{mdl}
 \DeclareAbbr{\mle}{mle}
+\DeclareAbbr{\mse}{mse}
 \DeclareAbbr{\nic}{nic}
 \DeclareAbbr{\nls}{nls}
 \DeclareAbbr{\pet}{pet}
