--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 23 May 2013.
+%% Created using Papers on Wed, 26 Jun 2013.
 %% http://papersapp.com/papers/
 
 @article{Richardson:1997ea,
@@ -1720,7 +1720,7 @@ pages = {635--652}
 @book{Burnham:2002wc,
 author = {Burnham, Kenneth P. and Anderson, David R.},
 title = {{Model Selection and Multimodel Inference: A Practical Information-theoretic Approach}},
-publisher = {Springer},
+publisher = {Springer-Verlag},
 year = {2002},
 address = {New York},
 edition = {2}
@@ -2128,14 +2128,13 @@ volume = {4},
 number = {2}
 }
 
-@article{Picard:1984vu,
-author = {Picard, Richard R and Cook, R Dennis},
-title = {{Cross-validation of regression models}},
-journal = {Journal of the American Statistical Association},
-year = {1984},
-volume = {79},
-number = {387},
-pages = {575--583}
+@book{Claeskens:2008tq,
+author = {Claeskens, Gerda and Hjort, Nils Lid},
+title = {{Model Selection and Model Averaging}},
+publisher = {Cambridge University Press},
+year = {2008},
+series = {Cambridge Series in Statistical and Probablistic Mathematics},
+address = {Cambridge, UK}
 }
 
 @inproceedings{Bolic:2003hl,
@@ -2146,12 +2145,40 @@ year = {2003},
 pages = {589--592}
 }
 
+@article{Picard:1984vu,
+author = {Picard, Richard R and Cook, R Dennis},
+title = {{Cross-validation of regression models}},
+journal = {Journal of the American Statistical Association},
+year = {1984},
+volume = {79},
+number = {387},
+pages = {575--583}
+}
+
+@article{Sin:1996vs,
+author = {Sin, Chor-Yiu and White, Halbert},
+title = {{Information criteria for selecting possibly misspecified parametric models}},
+journal = {Journal of Econometrics},
+year = {1996},
+volume = {71},
+number = {1},
+pages = {207--225}
+}
+
 @book{Bernardo:1994vd,
 author = {Bernardo, Jos{\'e} M. and Smith, Adrian F. M.},
 title = {{Bayesian Theory}},
 publisher = {John Wiley {\&} Sons, Inc.},
 year = {1994},
 series = {Wiley Series in Probability and Statistics}
+}
+
+@article{Lee:2001tm,
+author = {Lee, Sangyeol and Karagrigoriou, Alex},
+title = {{An asymptotically optimal selection of the order of a linear process}},
+journal = {Sankhy{\=a}: The Indian Journal of Statistics, Series A},
+year = {2001},
+pages = {93--106}
 }
 
 @phdthesis{Fearnhead:1998wj,
